[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/main_menu/sub_menus/shop_menu/shop_panels/ShopScrollPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/ui/ButtonEffect.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/UI/themes/scroll_no_bar.tres" type="Theme" id=3]
[ext_resource path="res://src/main_menu/sub_menus/shop_menu/shop_panels/shop_canvas.gd" type="Script" id=4]

[node name="ShopCanvas" type="Control"]
anchor_top = 0.062
anchor_right = 1.0
anchor_bottom = 0.875
margin_top = 0.511997
margin_bottom = -6.10352e-05
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1736.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkinsButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_right = 576.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 5

[node name="BackgroundsButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 580.0
margin_right = 1156.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 5

[node name="ExtrasButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 1160.0
margin_right = 1736.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 5

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 1736.0
margin_bottom = 68.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 576.0
margin_bottom = 832.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
scroll_vertical_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 1736.0
margin_bottom = 760.0
rect_min_size = Vector2( 576, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ShopScrollPanel" parent="VBoxContainer/ScrollContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 576.0
margin_bottom = 760.0

[node name="ShopScrollPanel2" parent="VBoxContainer/ScrollContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 580.0
margin_right = 1156.0
margin_bottom = 760.0

[node name="ShopScrollPanel3" parent="VBoxContainer/ScrollContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1160.0
margin_right = 1736.0
margin_bottom = 760.0

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SkinsButton" to="." method="_on_SkinsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BackgroundsButton" to="." method="_on_BackgroundsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ExtrasButton" to="." method="_on_ExtrasButton_pressed"]
